gitops/kustomize/codebase-browser/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codebase-browser
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
